== 0.91.001
	
	New features:
	----------------------------
	+ Favourite subnets widget;

	Bugfixes:
	--------
	+ UI fixes;
	+ Fixed bug where last page of IP addresses was inaccessible;
	+ IP address state change is now sent to all admins;
	+ Fixed subnet displaying as 0.0.0.0/0 in details;
	+ Fixed links to subnets form vlans and vrfs;

== 0.9

	New features:
	----------------------------
	+ Support for ICMP network discovery;
	+ Cron script to check status for selected subnets/hosts with threading suport (pcntl php extension required);
	+ ICMP check IP status in demand;
	+ Compressed (grouped) DHCP IP ranges;
	+ API server version 0.1;
	+ Option to show and group subnets by VLAN in subnets list;
	+ Option to show and group subnets by VRF in subnets list;
	+ Added subsections;
	+ Added AD username search;
	+ Added folders;

	Enhancements:
	----------------------------
	+ Added error catching/displaying for ajax-loaded php scripts;
	+ Added default language for login/requests display and new users;
	+ Added direct links to different pages in IP address table;
	+ Subnets can now be edited directly from nested subnets list;
	+ When adding nested subnets default vlan/vrf is selected from parent;
	+ Added Section ordering;
	+ Added per/section subnet ordering (overrides dafault form settings);
	+ Clicking on section now shows all subnets and belonging details;
	+ If session timeouts after re-login last requested page will be opened;
	+ Searh for IP address now returns also subnet, even if IP is not existing;
	+ Per-user selection of widgets to display;
	+ Added description and required field checkbox for custom IP/Subnet Fields;
	+ Added custom device fields;
	+ Mails are now sent through phpmailer;
	+ Admin user cannot be deleted;
	
	Translations:
	----------------------------
	+ Added French translation (Denis Darré);
	+ Added Dutch translation (Michiel Visser);
	+ Added German translation (Carsten Brückner);

	Bugfixes:
	----------------------------